@@ -1,3 +1,8 @@
+2007-05-11  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/tmpl/option.sgml: Document new G_OPTION_ARG_REMAINING
+	functionality.
+
 2007-05-03  Behdad Esfahbod  <behdad@gnome.org>
 
 	* glib/glib-sections.txt:
